test/Fail/TypeBasedTermination/ImpredicativeProp.err
TypeBasedTermination/ImpredicativeProp.agda:13.1-14.34: error: [TerminationIssue]
Termination checking failed for the following functions:
  no-bad
Problematic calls:
  no-bad _
    (at TypeBasedTermination/ImpredicativeProp.agda:14.16-22)
